<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/player1container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/babyblue">

        <TextView
            android:id="@+id/player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/player1"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/player1saldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/saldo"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/edtPlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/type_value"
                android:background="@color/white"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:entries="@array/spinner"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="5dp"
                android:text="@string/transferir"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/player2container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/darkyellow">

            <TextView
                android:id="@+id/player2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/player2"
                android:textSize="20sp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/player2saldo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/saldo"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtPlayer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/type_value"
                    android:background="@color/white"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:entries="@array/spinner"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/transferir"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/player3container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/darkgreen">

            <TextView
                android:id="@+id/player3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/player3"
                android:textSize="20sp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/player3saldo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/saldo"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtPlayer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/type_value"
                    android:background="@color/white"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:entries="@array/spinner"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/transferir"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/player4container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/darkred">

                <TextView
                    android:id="@+id/player4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/player4"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/player4saldo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/saldo"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtPlayer4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/type_value"
                        android:background="@color/white"
                        android:layout_weight="1"/>

                    <Spinner
                        android:id="@+id/spinner4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:entries="@array/spinner"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/transferir"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/player5container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/darkorange">

                <TextView
                    android:id="@+id/player5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/player5"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/player5saldo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/saldo"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtPlayer5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/type_value"
                        android:background="@color/white"
                        android:layout_weight="1"/>

                    <Spinner
                        android:id="@+id/spinner5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:entries="@array/spinner"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/transferir"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/player6container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/violet">

                    <TextView
                        android:id="@+id/player6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/player2"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:id="@+id/player6saldo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/saldo"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edtPlayer6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:hint="@string/type_value"
                            android:background="@color/white"
                            android:layout_weight="1"/>

                        <Spinner
                            android:id="@+id/spinner6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:entries="@array/spinner"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/transferir"
                            android:layout_weight="1"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>

